--- a/package.json
+++ b/package.json
@@ -1,11 +1,48 @@
 {
-  "name": "roter",
-  "version": "1.0.0",
-  "devDependencies": {
-    "babel": "5.5.8"
+  "name": "vstack-router",
+  "version": "0.1.0",
+  "description": "Universal router",
+  "keywords": [
+    "vstack",
+    "router"
+  ],
+  "homepage": "https://github.com/vslinko/vstack-router",
+  "bugs": {
+    "url": "https://github.com/vslinko/vstack-router/issues",
+    "email": "vslinko@yahoo.com"
   },
+  "license": "MIT",
+  "author": {
+    "name": "Vyacheslav Slinko",
+    "email": "vslinko@yahoo.com",
+    "url": "https://twitter.com/vslinko"
+  },
+  "contributors": [],
+  "main": "dist",
+  "bin": {},
+  "repository": {
+    "type": "git",
+    "url": "vslinko/vstack-router"
+  },
+  "scripts": {
+    "prepublish": "babel -d dist lib",
+    "example": "babel-node example/index.js"
+  },
+  "config": {},
   "dependencies": {
-    "babel-runtime": "5.6.1",
-    "match-route-pattern": "1.2.4"
-  }
+    "history": "^1.0.0",
+    "match-route-pattern": "^1.3.0"
+  },
+  "devDependencies": {
+    "babel": "^5.8.19"
+  },
+  "peerDependencies": {},
+  "bundledDependencies": [],
+  "optionalDependencies": {},
+  "engines": {},
+  "os": [],
+  "cpu": [],
+  "preferGlobal": false,
+  "private": false,
+  "publishConfig": {}
 }
