--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "prepublish": "babel -d dist lib",
-    "example": "babel-node example/index.js"
+    "example-console": "babel-node examples/console"
   },
   "config": {},
   "dependencies": {
