--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "scripts": {
     "prepublish": "babel -d dist lib",
-    "example-console": "babel-node examples/console"
+    "example-console": "babel-node examples/console",
+    "example-huge-app": "babel-node examples/huge-app/server"
   },
   "config": {},
   "dependencies": {
@@ -35,7 +36,15 @@
   },
   "devDependencies": {
     "babel": "^5.8.19",
-    "redux": "^1.0.0-rc"
+    "babel-core": "^5.8.19",
+    "babel-loader": "^5.3.2",
+    "babel-runtime": "^5.8.19",
+    "react": "^0.13.3",
+    "react-hot-loader": "^1.2.8",
+    "react-redux": "^0.2.2",
+    "redux": "^1.0.0-rc",
+    "webpack": "^1.10.5",
+    "webpack-dev-server": "^1.10.1"
   },
   "peerDependencies": {},
   "bundledDependencies": [],
