--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-hot-loader": "^1.2.8",
     "react-redux": "^0.2.2",
     "redux": "^1.0.0-rc",
+    "redux-vstack-router": "^0.1.0",
     "webpack": "^1.10.5",
     "webpack-dev-server": "^1.10.1"
   },
