--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vstack-router",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Universal router",
   "keywords": [
     "vstack",
@@ -18,42 +18,22 @@
     "url": "https://twitter.com/vslinko"
   },
   "contributors": [],
-  "main": "dist",
-  "bin": {},
-  "repository": {
-    "type": "git",
-    "url": "vslinko/vstack-router"
-  },
+  "main": "lib/index.js",
   "scripts": {
-    "prepublish": "rm -rf dist && babel -d dist lib",
-    "example-console": "babel-node examples/console",
-    "example-huge-app": "babel-node examples/huge-app/server"
-  },
-  "config": {},
-  "dependencies": {
-    "history": "^1.0.0",
-    "match-route-pattern": "^1.3.0"
+    "prepublish": "rm -rf lib && babel src -x .ts --out-dir lib"
   },
   "devDependencies": {
-    "babel": "^5.8.19",
-    "babel-core": "^5.8.19",
-    "babel-loader": "^5.3.2",
-    "babel-runtime": "^5.8.19",
-    "react": "^0.13.3",
-    "react-hot-loader": "^1.2.8",
-    "react-redux": "^0.2.2",
-    "redux": "^1.0.0-rc",
-    "redux-vstack-router": "^0.1.0",
-    "webpack": "^1.10.5",
-    "webpack-dev-server": "^1.10.1"
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-transform-modules-commonjs": "^7.9.6",
+    "@babel/preset-typescript": "^7.9.0"
   },
-  "peerDependencies": {},
-  "bundledDependencies": [],
-  "optionalDependencies": {},
-  "engines": {},
-  "os": [],
-  "cpu": [],
-  "preferGlobal": false,
-  "private": false,
-  "publishConfig": {}
+  "babel": {
+    "presets": [
+      "@babel/preset-typescript"
+    ],
+    "plugins": [
+      "@babel/plugin-transform-modules-commonjs"
+    ]
+  }
 }
